2010-08-31  Emanuel Schuetze <emanuel@intevation.de>

	* manual/Makefile.am: Adapt Makefile.am to added screenshots.

2010-08-30 Drew Northup <dnorthup@maine.edu>

	* manual/images-compendium/sc-gpgol-options_en.png,
	manual/images-compendium/sc-ol-sendEncryptedMail_en.png,
	manual/images-compendium/sc-kleopatra-sign-OpenpgpPinentry_en.png,
	manual/images-compendium/sc-gpgex-contextmenu-verifyDecrypt_en.png,
	manual/images-compendium/sc-gpgex-contextmenu-signEncrypt_en.png:
	Adding some still missing English screenshots: GpgEX, Pinentry for
	secret key, a couple more gpgol and outlook screenshots.

2010-08-30  Emanuel Schuetze <emanuel@intevation.de>

	* website/donate.htm4, website/donate-de.htm4: Add two new sponsors.

	* manual/Makefile.am, manual/gpg4win-compendium-en.tex,
	manual/images-compendium/sc-kleopatra-certificateSearchOnKeyserver_en.png,
	manual/images-compendium/sc-wordpad-editOpenpgpKey_en.png,
	manual/images-compendium/sc-kleopatra-openpgp-exportSecretKey_en.png,
	manual/images-compendium/sc-pinentry-p12-import-b_en.png,
	manual/images-compendium/sc-kleopatra-decryptFile2_en.png,
	manual/images-compendium/sc-inst-finished2_en.png,
	manual/images-compendium/sc-kleopatra-withOpenpgpTestkey_en.png,
	manual/images-compendium/sc-pinentry-p12-import-a_en.png,
	manual/images-compendium/sc-kleopatra-decryptFile1_en.png,
	manual/images-compendium/sc-kleopatra-certifyCertificate3_en.png,
	manual/images-compendium/sc-kleopatra-openpgp-pinentry_en.png,
	manual/images-compendium/sc-kleopatra-sign-selectCertificate_en.png,
	manual/images-compendium/sc-kleopatra-certifyCertificate2_en.png,
	manual/images-compendium/sc-kleopatra-encryptFile3_en.png,
	manual/images-compendium/sc-kleopatra-certifyCertificate1_en.png,
	manual/images-compendium/sc-kleopatra-encryptFile2_en.png,
	manual/images-compendium/sc-kleopatra-encryptFile1_en.png,
	manual/images-compendium/sc-kleopatra-x509-pinentry_en.png,
	manual/images-compendium/sc-kleopatra-configureKeyserver_en.png,