@@ -145,7 +145,7 @@
     % redefine bmod
     \newcommand{\bmod}{mod}
     % use hlx icons (default path)
-    \newcommand{\HlxIcons}{}
+    \newcommand{\HlxIcons}{./images-hyperlatex}
 
     % Footer
     \htmladdress{$\copyright$ \compendiumDateDE, v\compendiumVersionDE
